--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "\"¿Qué agradable agonía vamos a provocar?\"",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "ts-node-esm src/index.ts"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,13 +16,10 @@
     "url": "https://github.com/GeremiasR/ThreshHook/issues"
   },
   "homepage": "https://github.com/GeremiasR/ThreshHook#readme",
-  "devDependencies": {
-    "@types/node": "^18.16.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
-  },
+  "devDependencies": {},
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-binance-api": "^0.13.1"
   }
 }
